--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,12 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.v4.view.ViewPager android:id="@+id/pager"
-        android:layout_width="match_parent" android:layout_height="match_parent"
-        tools:context=".MainActivity" />
+    <LinearLayout
+        android:id="@+id/content_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    </LinearLayout>
 
     <!-- The navigation drawer -->
     <ListView android:id="@+id/left_drawer"
