--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:background="#111"/>
+        android:dividerHeight="1dp"
+        android:divider="@drawable/custom_divider"
+        android:background="#fff"/>
 
 
 </android.support.v4.widget.DrawerLayout>
